--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Magic Category</title>
 </head>
 <body>
-    Magic Book Store
+    Magic Book Store yaa
     <br>
         <button name="home"><a href="index.html">หน้าแรก</a></button>
         <button name="home"><a href="category.html">หมวดหมู่</a></button>
